# api-docs

./: CNAME  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: CNAME  index.md
docs/API/: waldur-openapi-schema-7.9.5.yaml  waldur-openapi-schema-7.9.7.yaml  waldur-openapi-schema-8.0.2.yaml  waldur-openapi-schema-8.0.3.yaml  waldur-openapi-schema-8.0.5.yaml
docs/billing-and-finance/invoices-and-payments/: customer-credits.md  invoice-items.md  invoice.md  invoices.md  payment-profiles.md  payments.md  project-credits.md  provider-invoice-items.md
docs/billing-and-finance/reporting-and-analytics/: billing-total-cost.md  customer-quotas.md  daily-quotas.md  financial-reports.md  project-quotas.md
docs/cloud-and-hpc-providers/aws/: images.md  instances.md  regions.md  sizes.md  volumes.md
docs/cloud-and-hpc-providers/azure/: images.md  locations.md  public-ips.md  resource-groups.md  sizes.md  sql-databases.md  sql-servers.md  virtualmachines.md
docs/cloud-and-hpc-providers/digitalocean/: droplets.md  images.md  regions.md  sizes.md
docs/cloud-and-hpc-providers/openportal/: openportal-allocation-user-usage.md  openportal-allocations.md  openportal-associations.md  openportal-managed-projects.md  openportal-project-template.md  openportal-projectinfo.md  openportal-remote-allocations.md  openportal-remote-associations.md  openportal-unmanaged-projects.md  openportal-userinfo.md  (+1 more)
main/: 404.html  index.html  sitemap.xml
main/API/: waldur-openapi-schema-7.9.8.yaml  waldur-openapi-schema-8.0.0.yaml  waldur-openapi-schema-8.0.1.yaml
(+675 files in other folders)
