[project]
name = "waldur-api-docs"
version = "0.1.0"
description = "API reference and SDK documentation for Waldur cloud management platform"
authors = [{name = "OpenNode Team", email = "info@opennodecloud.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=7.3.1",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mkdocs-print-site-plugin>=2.6.0",
    "pymdown-extensions>=10.12",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mike>=2.1.3",
    "mkdocs-include-markdown-plugin>=7.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
